[package]
name = "sql-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.4", features = ["derive"] }
csv = "1.3.0"

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]